# flux

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PERF_REPORT.md  README.md  language_design.md
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
benches/: aether_bench.rs  aoc_day1_bench.rs  array_passing_bench.rs  closure_capture_bench.rs  compiler_compile_bench.rs  hamt_bench.rs  lexer_bench.rs  map_filter_fold_bench.rs  parser_bench.rs  tail_call_accumulator_bench.rs  zero_copy_value_bench.rs
benchmarks/: README.md
benchmarks/aoc/: day1_part2.py  day1_part2_rust.rs  day1_rust.rs  day2_part1.py  day2_part1_rust.rs  day2_part2.py
benchmarks/flux/: binarytrees.flx  binarytrees_fbip.flx  binarytrees_smoke.flx  cfold.flx  deriv.flx  nqueens.flx  qsort.flx  rbtree.flx  rbtree2.flx  rbtree_ck.flx  rbtree_del.flx
benchmarks/haskell/: binarytrees.hi  binarytrees.hs  cfold.hs  deriv.hs  nqueens.hs  qsort.hs  rbtree-ck.hs  rbtree-del.hs  rbtree.hs  rbtree2.hs
benchmarks/ocaml/: binarytrees.ml  cfold.ml  deriv.ml  nqueens.ml  qsort.ml  rbtree.ml  rbtree2.ml  rbtree_ck.ml  rbtree_del.ml
benchmarks/python/: binarytrees.py  cfold.py  deriv.py  nqueens.py  qsort.py  rbtree.py  rbtree2.py  rbtree_ck.py  rbtree_del.py
benchmarks/rust/: binarytrees.rs  cfold.rs  deriv.rs  nqueens.rs  qsort.rs  rbtree.rs  rbtree2.rs  rbtree_ck.rs  rbtree_del.rs
cargo-flamegraph.trace/Trace1.run/: RunIssues.storedata
changes/: 2026-02-21-release-automation.md  2026-02-23-auto.md  2026-02-23-primops-parity-and-changelog-ci.md  2026-02-23-primops.md  2026-03-01-docs-guides-proposals.md  2026-03-01-effect-rows-completeness.md  2026-03-01-type-system-diagnostics-fixtures.md  2026-03-01-v0-0-4-hardening.md  2026-03-14-auto.md  2026-03-16-auto.md  2026-03-17-auto.md  2026-03-18-auto.md  2026-03-19-auto.md  2026-03-26-auto.md  2026-03-31-auto.md  2026-04-12-auto.md  2026-04-17-signature-directed-checking.md  2026-04-23-polymorphic-effect-ops-rfc.md  2026-04-25-multi-effect-aliases.md  2026-04-26-auto.md  2026-04-26-import-cycle-diagnostics.md  README.md  _template.md
ci/: examples_manifest.tsv
docs/: COMPILER_ARCHITECTURE.md  GRAMMAR_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  MODULE_LET_PROPOSAL.md  MODULE_LET_REVIEW.md  ROADMAP_v0.0.2.md  STDLIB_PROPOSAL.md  aoc_performance.md  architecture_roadmap.md  block_expr_disambiguation.md  debugging_tools.md  error_catalog.md  improvements_backlog.md  language_design.md  module_graph.md  parser_analysis.md  parser_step_c_analysis.md
docs/architecture/: architecture_roadmap.md  compiler_architecture.md  error_catalog.md  gc_roadmap.md  module_graph.md  visitor_pattern_guide.md
docs/guide/: 01_getting_started.md  02_functions_and_closures.md  03_collections.md  04_pattern_matching.md  05_higher_order_functions.md  06_pipe_and_comprehensions.md  07_modules.md  08_testing.md  09_type_system_basics.md  10_effects_and_purity.md  11_hof_effect_polymorphism.md  12_modules_public_api_and_strict.md  13_match_exhaustiveness_and_adts.md  14_real_world_pipeline_walkthrough.md  15_parity_validation.md  16_named_fields.md  README.md
docs/internals/: aether.md  aether_debugging.md  aether_formal_semantics.md  backend_representation_contracts.md  base_api.md  base_functions.md  base_hm_signatures.md  builtins.md  bytecode.md  diagnostics.md  (+25 more)
examples/: 01_print.flx  02_arithmetic.flx  03_prefix.flx  04_comparison.flx  05_variables.flx  06_complex_expr.flx  07_strings.flx  10_array_builtins.flx  11_hash_basic.flx  14_array_iteration.flx  15_mini_database.flx  Main.flx  ModuleGraphA.flx  ModuleGraphB.flx  ModuleGraphC.flx  ModuleGraphCycleA.flx  ModuleGraphCycleB.flx  UserUtils.flx  alias_import_script.flx  alias_invalid_error.flx  alias_nested_ok.flx  closure.flx  closure_outer_assign_error.flx  closure_shadow_ok.flx  data_math_test_script.flx  demo_hint_rendering.rs  duplicate_params_error.flx  duplicate_params_literal_error.flx  duplicate_root_import_error.flx  expected_token_error.flx  function_redeclaration_error.flx  function_redeclaration_ok.flx  ice_demo.flx  import_collision_error.flx  import_collision_ok.flx  import_in_function_error.flx  import_script_error.flx  import_semicolon_error.flx  ink_script.flx  linter_warnings.flx  (+28 more)
reports/: BINARYTREES_REPORT.md  CFOLD_REPORT.md  DERIV_REPORT.md  NQUEENS_REPORT.md  PERF_REPORT.md  QSORT_REPORT.md  RBTREE2_REPORT.md  RBTREE_CK_REPORT.md  RBTREE_DEL_REPORT.md  RBTREE_REPORT.md
scripts/: bench.sh  bench_aoc.sh  bench_benchmark_flamewatch.sh  bench_binarytrees.sh  bench_binarytrees_flamewatch.sh  bench_cross_lang.sh  bench_flamewatch.sh  bench_report.rs  changelog_fragment_from_commits.sh  changelog_from_fragments.sh  check_changelog_fragment.sh  check_core_to_llvm_parity.sh  check_parity.sh  check_parity_exceptions.tsv  release_cut.sh  run_debug_examples.sh  run_examples.sh  run_grade_analyzer.sh
src/: cache_paths.rs  lib.rs  main.rs
tests/: README.md  aether_backend_parity.rs  aether_cli_snapshots.rs  aether_core_regressions.rs  aether_fbip_diagnostics.rs  aether_generative_differential.rs  ast_complexity_tests.rs  ast_constant_fold_tests.rs  ast_desugar_tests.rs  ast_fold_smoke.rs  ast_free_vars_tests.rs  ast_rename_tests.rs  ast_tail_position_tests.rs  ast_visit_smoke.rs  backend_representation_runtime_tests.rs  base_functions_tests.rs  bitwise_primop_native_tests.rs  builtins_tests.rs  cache_invalidation_tests.rs  call_base_superinstruction_tests.rs  call_builtin_superinstruction_tests.rs  cmp_jump_fusion_tests.rs  compiler_error_fixtures_snapshots.rs  compiler_optimization_integration_test.rs  compiler_rules_tests.rs  constrained_type_params_integration.rs  contextual_instance_runtime_tests.rs  core_to_llvm_adt.rs  core_to_llvm_adt_snapshots.rs  core_to_llvm_closures.rs  core_to_llvm_codegen.rs  core_to_llvm_codegen_snapshots.rs  core_to_llvm_phase3.rs  core_to_llvm_phase4.rs  core_to_llvm_phase5.rs  core_to_llvm_phase5_snapshots.rs  core_to_llvm_snapshots.rs  core_to_llvm_type_class.rs  core_type_contract_matrix_tests.rs  cross_module_function_tests.rs  (+80 more)
(+4013 files in other folders)
