[package]
name = "flux"
version = "0.0.3"
edition = "2024"
authors = ["Spiros Gerokostas <spiros.gerokostas@gmail.com>"]
license = "MIT"
default-run = "flux"

[features]
gc-telemetry = []
jit = [
    "cranelift-codegen",
    "cranelift-frontend",
    "cranelift-module",
    "cranelift-jit",
    "cranelift-native",
    "target-lexicon",
]

[dependencies]
sha2 = "0.10"
cranelift-codegen = { version = "0.128", optional = true }
cranelift-frontend = { version = "0.128", optional = true }
cranelift-module = { version = "0.128", optional = true }
cranelift-jit = { version = "0.128", optional = true }
cranelift-native = { version = "0.128", optional = true }
target-lexicon = { version = "0.13", optional = true }

[dev-dependencies]
insta = { version = "1.41", features = ["yaml"] }
criterion = "0.5"

[profile.dev]
opt-level = 1
debug-assertions = false
overflow-checks = false

[profile.dev.package.flux]
opt-level = 3

[profile.dev-fast]
inherits = "dev"
opt-level = 3
debug = 1
debug-assertions = false
overflow-checks = false

[[bench]]
name = "lexer_bench"
harness = false

[[bench]]
name = "closure_capture_bench"
harness = false

[[bench]]
name = "array_passing_bench"
harness = false

[[bench]]
name = "tail_call_accumulator_bench"
harness = false

[[bench]]
name = "zero_copy_value_bench"
harness = false

[[bench]]
name = "map_filter_fold_bench"
harness = false

[[bench]]
name = "hamt_bench"
harness = false

[[bench]]
name = "aoc_day1_bench"
harness = false

[[bin]]
name = "aoc_day1_rust"
path = "benchmarks/aoc/day1_rust.rs"

[[bin]]
name = "aoc_day1_part2_rust"
path = "benchmarks/aoc/day1_part2_rust.rs"

[[bin]]
name = "aoc_day2_part1_rust"
path = "benchmarks/aoc/day2_part1_rust.rs"

[[bin]]
name = "aoc_day2_part2_rust"
path = "benchmarks/aoc/day2_part2_rust.rs"
