[package]
name = "flux"
version = "0.0.4"
edition = "2024"
authors = ["Spiros Gerokostas <spiros.gerokostas@gmail.com>"]
license = "MIT"
default-run = "flux"

[features]
native = []
llvm = ["native"]

[dependencies]
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.11"

[dev-dependencies]
insta = { version = "1.41", features = ["yaml"] }
criterion = "0.5"

[profile.dev]
opt-level = 1
debug-assertions = false
overflow-checks = false

[profile.dev.package.flux]
opt-level = 3

[profile.dev-fast]
inherits = "dev"
opt-level = 3
debug = 1
debug-assertions = false
overflow-checks = false

[[bench]]
name = "lexer_bench"
harness = false

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "compiler_compile_bench"
harness = false

[[bench]]
name = "closure_capture_bench"
harness = false

[[bench]]
name = "array_passing_bench"
harness = false

[[bench]]
name = "tail_call_accumulator_bench"
harness = false

[[bench]]
name = "zero_copy_value_bench"
harness = false

[[bench]]
name = "map_filter_fold_bench"
harness = false

[[bench]]
name = "hamt_bench"
harness = false

[[bench]]
name = "aoc_day1_bench"
harness = false

[[bench]]
name = "aether_bench"
harness = false

[[bin]]
name = "binarytrees_rust"
path = "benchmarks/rust/binarytrees.rs"

[[bin]]
name = "cfold_rust"
path = "benchmarks/rust/cfold.rs"

[[bin]]
name = "deriv_rust"
path = "benchmarks/rust/deriv.rs"

[[bin]]
name = "nqueens_rust"
path = "benchmarks/rust/nqueens.rs"

[[bin]]
name = "qsort_rust"
path = "benchmarks/rust/qsort.rs"

[[bin]]
name = "rbtree_ck_rust"
path = "benchmarks/rust/rbtree_ck.rs"

[[bin]]
name = "rbtree_rust"
path = "benchmarks/rust/rbtree.rs"

[[bin]]
name = "rbtree2_rust"
path = "benchmarks/rust/rbtree2.rs"

[[bin]]
name = "rbtree_del_rust"
path = "benchmarks/rust/rbtree_del.rs"
